.playwright-mcp/console-2026-03-30T10-07-50-577Z.log
[    2010ms] [WARNING] cdn.tailwindcss.com should not be used in production. To use Tailwind CSS in production, install it as a PostCSS plugin or use the Tailwind CLI: https://tailwindcss.com/docs/installation @ https://cdn.tailwindcss.com/:63
[    3835ms] [WARNING] You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/ @ https://unpkg.com/@babel/standalone/babel.min.js:2
[    3968ms] Uncaught SyntaxError: /Inline Babel script: Unexpected token (676:16)

  674 |             );
  675 |         }
> 676 |                 }
      |                 ^
  677 |
  678 |                 let updated = [...data.blogs];
  679 |                 if (editingId) {
    at e (https://unpkg.com/@babel/standalone/babel.min.js:2:260001)
    at r.raise (https://unpkg.com/@babel/standalone/babel.min.js:2:312097)
    at r.unexpected (https://unpkg.com/@babel/standalone/babel.min.js:2:312531)
    at r.parseExprAtom (https://unpkg.com/@babel/standalone/babel.min.js:2:485197)
    at r.parseExprAtom (https://unpkg.com/@babel/standalone/babel.min.js:2:353992)
    at r.parseExprSubscripts (https://unpkg.com/@babel/standalone/babel.min.js:2:477957)
    at r.parseUpdate (https://unpkg.com/@babel/standalone/babel.min.js:2:477578)
    at r.parseMaybeUnary (https://unpkg.com/@babel/standalone/babel.min.js:2:477192)
    at r.parseMaybeUnaryOrPrivate (https://unpkg.com/@babel/standalone/babel.min.js:2:473985)
    at r.parseExprOps (https://unpkg.com/@babel/standalone/babel.min.js:2:474095)
    at r.parseMaybeConditional (https://unpkg.com/@babel/standalone/babel.min.js:2:473565)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone/babel.min.js:2:472471)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone/babel.min.js:2:393895)
    at r.parseExpressionBase (https://unpkg.com/@babel/standalone/babel.min.js:2:471592)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:471499)
    at r.allowInAnd (https://unpkg.com/@babel/standalone/babel.min.js:2:505221)
    at r.parseExpression (https://unpkg.com/@babel/standalone/babel.min.js:2:471468)
    at r.parseStatementContent (https://unpkg.com/@babel/standalone/babel.min.js:2:514127)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone/babel.min.js:2:511688)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone/babel.min.js:2:379261)
    at r.parseModuleItem (https://unpkg.com/@babel/standalone/babel.min.js:2:511183)
    at r.parseBlockOrModuleBlockBody (https://unpkg.com/@babel/standalone/babel.min.js:2:523508)
    at r.parseBlockBody (https://unpkg.com/@babel/standalone/babel.min.js:2:523341)
    at r.parseProgram (https://unpkg.com/@babel/standalone/babel.min.js:2:508592)
    at r.parseTopLevel (https://unpkg.com/@babel/standalone/babel.min.js:2:507298)
    at r.parseTopLevel (https://unpkg.com/@babel/standalone/babel.min.js:2:397776)
    at r.parse (https://unpkg.com/@babel/standalone/babel.min.js:2:550300)
    at aR (https://unpkg.com/@babel/standalone/babel.min.js:2:550498)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:1117738)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:1067)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:1897)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:825)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:1897)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:825)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:1897)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:825)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:1897)
    at iF (https://unpkg.com/@babel/standalone/babel.min.js:2:945623)
    at sync (https://unpkg.com/@babel/standalone/babel.min.js:2:943714)
    at stopHiding - secret - don't use this - v1 (https://unpkg.com/@babel/standalone/babel.min.js:2:1069423)
    at SV (https://unpkg.com/@babel/standalone/babel.min.js:2:1126175)
    at FEe (https://unpkg.com/@babel/standalone/babel.min.js:2:3132104)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:3127920)
    at SEe (https://unpkg.com/@babel/standalone/babel.min.js:2:3128309)
    at n (https://unpkg.com/@babel/standalone/babel.min.js:2:3128570)
    at PEe (https://unpkg.com/@babel/standalone/babel.min.js:2:3129349)
    at <anonymous> (https://unpkg.com/@babel/standalone/babel.min.js:2:3133005)
    at VEe (https://unpkg.com/@babel/standalone/babel.min.js:2:3133015)
    at WEe (https://unpkg.com/@babel/standalone/babel.min.js:2:3132620)
